--- a/Pegada/Pegada.Android/Pegada.Android.csproj
+++ b/Pegada/Pegada.Android/Pegada.Android.csproj
@@ -1014,5 +1014,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\camera_icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\flag_brazil.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\flag_eua.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\flag_spain.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
