Ajustes de grades do detalhe do catalogo

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Pegada/.vs/
 Pegada/Pegada.Android/obj/
 Pegada/Pegada.UWP/bin/
 Pegada/Pegada.UWP/obj/
+Pegada/Pegada.Core/bin/
+Pegada/Pegada.iOS/obj/
